# TotoGL-v3

./: .gitignore  CMakeLists.txt  README.md
assets/models/: kirby.mtl  metal-susan.mtl
assets/shader/: normal.frag  phong.frag  shader.frag  shader.vert  skydome.frag  uv.frag
assets/shaders/: depth.frag  shader.frag  skydome.vert
include/TotoGL/: GL.hpp  ImGui.hpp  Impl.hpp  Renderer.hpp  TotoGL.hpp  Window.hpp
include/TotoGL/CameraControl/: FreeUseControl.hpp  FreeflyControl.hpp  OrbitControl.hpp  TrackballControl.hpp
include/TotoGL/GPUPointer/: Buffers.hpp  GPUPointer.hpp  PointerManager.hpp  Shader.hpp  Texture.hpp
include/TotoGL/GPUPointers/: Buffers.hpp  GPUPointers.hpp  Shader.hpp  Texture.hpp
include/TotoGL/Loaders/: WavefrontLoader.hpp
include/TotoGL/Misc/: EventListener.hpp  Factory.hpp
include/TotoGL/Primitives/: BufferTexture.hpp  Clock.hpp  Color.hpp  MaterialData.hpp  RenderObject.hpp  Shader.hpp  ShaderProgram.hpp  Texture.hpp  Transform.hpp  Transformation.hpp  Uniform.hpp  Vertex.hpp  VertexObject.hpp
include/TotoGL/RenderObject/: Camera.hpp  Light.hpp  Material.hpp  MaterialObject.hpp  Mesh.hpp  RenderGroup.hpp  RenderObject.hpp  Scene.hpp  ShaderMaterial.hpp  Skydome.hpp  VertexObject.hpp
source/: Renderer.cpp  Window.cpp  aside.cpp  main.cpp
source/CameraControl/: FreeUseControl.cpp  OrbitControl.cpp
source/Loaders/: WavefrontLoader.cpp
source/Primitives/: BufferTexture.cpp  Clock.cpp  Texture.cpp  Transform.cpp
source/RenderObject/: Camera.cpp  Light.cpp  MaterialObject.cpp  Mesh.cpp  MeshShapes.cpp  RenderGroup.cpp  RenderObject.cpp  Scene.cpp  ShaderMaterial.cpp  Skydome.cpp
source/_embeds/: shaders.hpp
test/source/: aside.cpp  main.cpp
